--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,7 +22,8 @@
         android:text="@string/test"/>
 
     <com.example.android.clock.CustomClock
-        app:timeZone="UTC_P6"
+        android:padding="100dp"
+        app:timeZone="UTC_P3"
         app:textColor="@color/black"
         app:backgroundColor="@color/black"
         app:frameColor="@color/black"
@@ -31,13 +32,35 @@
         app:hourHandColor="@color/black"
         app:font="@font/poppinsregular"
         android:id="@+id/customClock"
-        android:layout_width="200dp"
-        android:layout_height="200dp"
+        android:layout_width="250dp"
+        android:layout_height="250dp"
         app:layout_constraintTop_toBottomOf="@+id/customViewLabel"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginTop="8dp"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+    </androidx.recyclerview.widget.RecyclerView>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@+id/customClock"
+        app:cardBackgroundColor="@color/blue"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:padding="70dp"
+        android:layout_marginBottom="10dp">
+        <com.example.android.clock.CustomClock
+            android:layout_width="150dp"
+            android:layout_height="150dp">
+
+        </com.example.android.clock.CustomClock>
+    </androidx.cardview.widget.CardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
